[gd_scene load_steps=2 format=3 uid="uid://performance_panel_ui"]

[ext_resource type="Script" path="res://src/ui/performance_panel_ui.gd" id="1_script"]

[node name="PerformancePanelUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"Panel"
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Performance / Tool Pool"
theme_override_colors/font_color = Color(0.8, 0.95, 1, 1)
theme_override_font_sizes/font_size = 20

[node name="SubtitleLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Limit active tool spawns; extra instances are pooled automatically."
theme_override_colors/font_color = Color(0.7, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 13

[node name="LimitGrid" type="GridContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
columns = 1
theme_override_constants/separation = 6

[node name="PolyRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/PolyRow"]
layout_mode = 2
text = "Poly Tool"
custom_minimum_size = Vector2(140, 0)

[node name="Spin" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/PolyRow"]
layout_mode = 2
min_value = 0.0
max_value = 8.0
step = 1.0
value = 1.0
custom_minimum_size = Vector2(120, 0)

[node name="Counts" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/PolyRow"]
layout_mode = 2
text = "Active 0 / Pooled 0 (Limit 1)"
size_flags_horizontal = 3

[node name="ConvexRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/ConvexRow"]
layout_mode = 2
text = "Convex Hull Pen"
custom_minimum_size = Vector2(140, 0)

[node name="Spin" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/ConvexRow"]
layout_mode = 2
min_value = 0.0
max_value = 8.0
step = 1.0
value = 1.0
custom_minimum_size = Vector2(120, 0)

[node name="Counts" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/ConvexRow"]
layout_mode = 2
text = "Active 0 / Pooled 0 (Limit 1)"
size_flags_horizontal = 3

[node name="VolumeRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/VolumeRow"]
layout_mode = 2
text = "Volume Hull Pen"
custom_minimum_size = Vector2(140, 0)

[node name="Spin" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/VolumeRow"]
layout_mode = 2
min_value = 0.0
max_value = 8.0
step = 1.0
value = 1.0
custom_minimum_size = Vector2(120, 0)

[node name="Counts" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/VolumeRow"]
layout_mode = 2
text = "Active 0 / Pooled 0 (Limit 1)"
size_flags_horizontal = 3

[node name="VoxelRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/VoxelRow"]
layout_mode = 2
text = "Voxel Tool"
custom_minimum_size = Vector2(140, 0)

[node name="Spin" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/VoxelRow"]
layout_mode = 2
min_value = 0.0
max_value = 8.0
step = 1.0
value = 1.0
custom_minimum_size = Vector2(120, 0)

[node name="Counts" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LimitGrid/VoxelRow"]
layout_mode = 2
text = "Active 0 / Pooled 0 (Limit 1)"
size_flags_horizontal = 3

[node name="StatusLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Ready"
theme_override_colors/font_color = Color(0.75, 1, 0.75, 1)
